<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadina"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:background="#CCFFBD"
        app:cardCornerRadius="10dp"
        android:shadowColor="#0D3B00"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="2"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:shadowColor="#0D3B00"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="2"
                android:text="@string/it355_ispit"
                android:textColor="#2E6A1B"
                android:textSize="35sp"
                android:gravity="center"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/broj_indeksa"
                android:textColor="#3A8721"
                android:textSize="25sp"

                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etBrInd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:hint="@string/broj_indeksa_hint"
                    android:maxLength="4"
                    android:inputType="number"
                    android:textColor="#135300" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/zapo_nite_ispit">
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>